# rester

./: .gitignore  Cargo.toml  README.md  requests.json
.github/workflows/: rust.yml
src/: app.rs  default_key_binds.rs  key_bind.rs  lib.rs  main.rs  paragraph_with_state.rs  persistence.rs  web_request_handler.rs
src/layout/: block.rs
src/ui/: cursor.rs  mod.rs  paragraph.rs  text_area.rs
