[package]
name = "rester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22.1" }
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
strum_macros = "0.23.1"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.1.0"
jsonxf = "1.1.1"